fixed position on iphone sizes does NOT work

--- a/css/style.css
+++ b/css/style.css
@@ -1179,7 +1179,6 @@ CUSTOM CSS STUFF
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
-    background-attachment: fixed;
     text-align: center;
   }
 
@@ -1198,7 +1197,6 @@ CUSTOM CSS STUFF
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
-    background-attachment: fixed;
     text-align: center;
   }
 
@@ -1260,7 +1258,6 @@ CUSTOM CSS STUFF
       background-repeat: no-repeat;
       background-size: cover;
       background-position: center center;
-      background-attachment: fixed;
       text-align: center;
     }
 
@@ -1280,7 +1277,6 @@ CUSTOM CSS STUFF
       background-repeat: no-repeat;
       background-size: cover;
       background-position: center center;
-      background-attachment: fixed;
       text-align: center;
     }
 
